<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.MyFlightsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/teal_700"
            android:minHeight="?attr/actionBarSize">
            <CheckBox
                android:id="@+id/pastFlights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_flights"
                android:buttonTint="@color/white"
                android:layout_gravity="start"
                android:textColor="@color/white"
                />

            <CheckBox
                android:id="@+id/futureFlights"
                android:buttonTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/future_flights"
                android:layout_gravity="center"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete All"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                android:layout_gravity="end"
                android:id="@+id/delete"
                android:backgroundTint="@color/white"
                />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_margin="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>