<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/teal_700"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/imageDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/flightName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Make a reservation"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            app:drawableEndCompat="@drawable/arrow"
            />

    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/flightNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        android:layout_marginStart="30dp"
        android:text="@string/flight_number"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/flightNumber"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/flightGate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightNumber"
        android:layout_marginStart="30dp"
        android:text="@string/gate"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/gate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/flightGate"
        app:layout_constraintTop_toBottomOf="@+id/flightNumber"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/flightDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightGate"
        android:layout_marginStart="30dp"
        android:text="@string/scheduled_date"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/flightDate"
        app:layout_constraintTop_toBottomOf="@+id/flightGate"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/flightTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightDate"
        android:layout_marginStart="30dp"
        android:text="@string/scheduled_time"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/flightTime"
        app:layout_constraintTop_toBottomOf="@+id/flightDate"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/flightDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightTime"
        android:layout_marginStart="30dp"
        android:text="@string/destination"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/flightDestination"
        app:layout_constraintTop_toBottomOf="@+id/flightTime"
        android:layout_marginStart="10dp"
        android:maxWidth="150dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/seat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/destination"
        app:layout_constraintTop_toBottomOf="@+id/flightTime"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/seatsSpinner"
        android:text="@string/seat"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        />
    <Spinner
        android:id="@+id/seatsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:entries="@array/seats"
        app:layout_constraintTop_toBottomOf="@+id/flightTime"
        app:layout_constraintStart_toEndOf="@+id/seat"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <ImageView
        android:id="@+id/seats"
        android:layout_width="match_parent"
        android:rotation="90"
        android:layout_height="0dp"
        android:src="@drawable/seats_mp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightDestination"
        />





</androidx.constraintlayout.widget.ConstraintLayout>